<LinearLayout android:id="@+id/main_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imgSystemState"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            android:paddingTop="15dp"
            android:paddingBottom="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:src="@drawable/ic_launcher_background"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingStart="40dp"
            android:paddingRight="40dp"
            android:paddingEnd="40dp"
            android:paddingBottom="25dp" >

            <TextView
                android:id="@+id/txtMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="3dp"
                android:text="@string/permit_message"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imgViewStorage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="0"
                    android:src="@drawable/ic_folder_permit"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/txtStorage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/permit_storage"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imgViewContacts"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="0"
                    android:src="@drawable/ic_sms_permit"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/txtSMS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/permit_sms"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imgViewPhone"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="0"
                    android:src="@drawable/ic_phone_permit"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/permit_phone"
                    android:textAppearance="?android:attr/textAppearanceSmall" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imgViewLocation"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_weight="0"
                    android:src="@drawable/ic_location_permit"
                    android:contentDescription="@null" />

                <TextView
                    android:id="@+id/txtLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="1"
                    android:text="@string/permit_location"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:id="@+id/btnGoSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/permit_button"
                    android:textAllCaps="false"
                    android:textColor="@color/black" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
